feat: connect with calendar api
estableci la conexion con la api de google calendar

--- a/app_web/package.json
+++ b/app_web/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.1.1",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
+    "vue-gapi": "^2.0.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0"
   },
